# gpt2-kenyan-clinical

./: README.md  interface.py  pyproject.toml
data_annotation/: annotation_pipeline.py
inference/: generate_response.py
train/: train_gpt2.py
